--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "External/GHUnit"]
 	path = External/GHUnit
 	url = git://github.com/gabriel/gh-unit.git
+[submodule "Vendor/SXBM"]
+	path = Vendor/SXBM
+	url = ssh://christoffer@niblha.dyndns.org/home/christoffer/scm/git/niblha/SXBM
