"build both armv6 and armv7"

--- a/XCConfig/SXBMApplication.xcconfig
+++ b/XCConfig/SXBMApplication.xcconfig
@@ -5,4 +5,6 @@
 PRODUCT_BASE_NAME = ASIHTTPRequest
 PRODUCT_NAME = ASIHTTPRequest
 
+ONLY_ACTIVE_ARCH[sdk=iphoneos*] = NO
+
 SXBM_HOST_WARNING_CFLAGS = -Wno-pointer-arith -Wno-float-equal -Wno-unused-function
